--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<h2>о нас</h2>
 			<div class="about-us-box">
 				<div class="about-us-img">
-					<img src="img/about-us1.png" alt="О нас" width="444" height="465">
+					<img src="img/about-us1.png" alt="О нас">
 				</div>
 				<div class="about-us-text">
 					<p>Премиальный европейский текстиль — одно из самых главных направлений работы коллектива. Создавать
