--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 			<div class="work-photo">
 				<h2>наши работы</h2>
 				<div class="photo1 photo">
+					<img src="img/work1.png" alt="интерьер">
 					<div>
 						<p>Квартира-студия
 							30 кв.м.</p>
@@ -89,6 +90,7 @@
 					</div>
 				</div>
 				<div class="photo2 photo">
+					<img src="img/work2.png" alt="интерьер">
 					<div>
 						<p>Квартира-студия
 							30 кв.м.</p>
@@ -97,6 +99,7 @@
 					</div>
 				</div>
 				<div class="photo3 photo">
+					<img src="img/work3.png" alt="интерьер">
 					<div>
 						<p>Квартира-студия
 							30 кв.м.</p>
@@ -105,6 +108,7 @@
 					</div>
 				</div>
 				<div class="photo4 photo">
+					<img src="img/work4.png" alt="интерьер">
 					<div>
 						<p>Квартира-студия
 							30 кв.м.</p>
