added font-size adaptive

--- a/index.html
+++ b/index.html
@@ -82,39 +82,46 @@
 				<h2>наши работы</h2>
 				<div class="photo1 photo">
 					<img src="img/work1.png" alt="интерьер">
+					<!--
 					<div>
 						<p>Квартира-студия
 							30 кв.м.</p>
 						<p>В квартире были светлые стены и тёплые цвета. Мы сконцентрировались
 							на отсылках к природе и сделали ребятам уютный интерьер, отсылающий к виллам островов Бали.</p>
 					</div>
+					-->
 				</div>
 				<div class="photo2 photo">
 					<img src="img/work2.png" alt="интерьер">
+					<!--
 					<div>
 						<p>Квартира-студия
 							30 кв.м.</p>
 						<p>В квартире были светлые стены и тёплые цвета. Мы сконцентрировались
 							на отсылках к природе и сделали ребятам уютный интерьер, отсылающий к виллам островов Бали.</p>
 					</div>
+					-->
 				</div>
 				<div class="photo3 photo">
 					<img src="img/work3.png" alt="интерьер">
+					<!--
 					<div>
 						<p>Квартира-студия
 							30 кв.м.</p>
 						<p>В квартире были светлые стены и тёплые цвета. Мы сконцентрировались
 							на отсылках к природе и сделали ребятам уютный интерьер, отсылающий к виллам островов Бали.</p>
 					</div>
+					-->
 				</div>
 				<div class="photo4 photo">
 					<img src="img/work4.png" alt="интерьер">
+					<!--
 					<div>
 						<p>Квартира-студия
 							30 кв.м.</p>
 						<p>В квартире были светлые стены и тёплые цвета. Мы сконцентрировались
 							на отсылках к природе и сделали ребятам уютный интерьер, отсылающий к виллам островов Бали.</p>
-					</div>
+					</div>-->
 				</div>
 			</div>
 			<p><a href="#">Смотреть еще <img src="img/Arrow3.png" alt="стрелка"></a></p>
