--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</nav>
 			<a class="phone" href="tel:+79818574624">+7 (981) 857-46-24</a>
 		</div>
-		<div class="comfort">
+		<div class="header-content">
 			<h1>Поможем сделать вашу квартиру уютнее</h1>
 			<p>Подбираем текстиль, мебель и аксессуары<br>
 				под ваш интерьер, находим магазины<br>
