--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 				</div>
 				<p><span>scandi</span></p>
 			</div>
+
 			<nav class="header-nav">
 				<ul>
 					<li><a href="#about-us">О компании</a></li>
@@ -31,6 +32,21 @@
 					<li><a href="#data-request">Оставить заявку</a></li>
 				</ul>
 			</nav>
+			<div class="hamburger-menu">
+				<input id="menu__toggle" type="checkbox">
+				<label class="menu__btn" for="menu__toggle">
+					<span></span>
+				</label>
+
+				<ul class="menu__box">
+					<li><a class="menu__item" href="#about-us">О компании</a></li>
+					<li><a class="menu__item" href="#our-work">Портфолио</a></li>
+					<li><a class="menu__item" href="#comand">Команда</a></li>
+					<li><a class="menu__item" href="#how-work">Как мы работаем</a></li>
+					<li><a class="menu__item" href="#reviews">Отзывы клиентов</a></li>
+					<li><a class="menu__item" href="#data-request">Оставить заявку</a></li>
+				</ul>
+			</div>
 			<a class="phone" href="tel:+79818574624">+7 (981) 857-46-24</a>
 		</div>
 		<div class="header-content">
@@ -40,6 +56,7 @@
 				и помогаем организовать доставку </p>
 			<a href="#data-request" class="submit"><span>Оставить заявку</span></a>
 		</div>
+
 	</header>
 
 	<main>
@@ -47,7 +64,7 @@
 			<h2>о нас</h2>
 			<div class="about-us-box">
 				<div class="about-us-img">
-					<img src="img/about-us1.png" alt="О нас">
+					<img src="img/about-us.jpg" alt="О нас">
 				</div>
 				<div class="about-us-text">
 					<p>Премиальный европейский текстиль — одно из самых главных направлений работы коллектива. Создавать
@@ -77,51 +94,50 @@
 		</section>
 
 		<section class="our-work" id="our-work">
-
+			<h2>наши работы</h2>
 			<div class="work-photo">
-				<h2>наши работы</h2>
 				<div class="photo1 photo">
-					<img src="img/work1.png" alt="интерьер">
-					<!--
+					<img src="img/work1.jpg" alt="интерьер">
+
 					<div>
 						<p>Квартира-студия
 							30 кв.м.</p>
 						<p>В квартире были светлые стены и тёплые цвета. Мы сконцентрировались
 							на отсылках к природе и сделали ребятам уютный интерьер, отсылающий к виллам островов Бали.</p>
 					</div>
-					-->
+
 				</div>
 				<div class="photo2 photo">
-					<img src="img/work2.png" alt="интерьер">
-					<!--
+					<img src="img/work2.jpg" alt="интерьер">
+
 					<div>
 						<p>Квартира-студия
 							30 кв.м.</p>
 						<p>В квартире были светлые стены и тёплые цвета. Мы сконцентрировались
 							на отсылках к природе и сделали ребятам уютный интерьер, отсылающий к виллам островов Бали.</p>
 					</div>
-					-->
+
 				</div>
 				<div class="photo3 photo">
-					<img src="img/work3.png" alt="интерьер">
-					<!--
+					<img src="img/work3.jpg" alt="интерьер">
+
 					<div>
 						<p>Квартира-студия
 							30 кв.м.</p>
 						<p>В квартире были светлые стены и тёплые цвета. Мы сконцентрировались
 							на отсылках к природе и сделали ребятам уютный интерьер, отсылающий к виллам островов Бали.</p>
 					</div>
-					-->
+
 				</div>
 				<div class="photo4 photo">
-					<img src="img/work4.png" alt="интерьер">
-					<!--
+					<img src="img/work4.jpg" alt="интерьер">
+
 					<div>
 						<p>Квартира-студия
 							30 кв.м.</p>
 						<p>В квартире были светлые стены и тёплые цвета. Мы сконцентрировались
 							на отсылках к природе и сделали ребятам уютный интерьер, отсылающий к виллам островов Бали.</p>
-					</div>-->
+					</div>
 				</div>
 			</div>
 			<p><a href="#">Смотреть еще <img src="img/Arrow3.png" alt="стрелка"></a></p>
@@ -131,21 +147,21 @@
 			<h2>Команда</h2>
 			<div class="comand-photo">
 				<figure>
-					<img src="img/Masha2.png" alt="Фото Маши">
+					<img src="img/masha.jpg" alt="Фото Маши">
 					<figcaption>
 						Это Маша, наш главный дизайнер. Она отвечает за дизайн-проект, приезжает к вам домой, общается
 						и помогает сделать вашу квартиру красивой и уютной.
 					</figcaption>
 				</figure>
 				<figure>
-					<img src="img/Sasha.png" alt="Фото Саши">
+					<img src="img/sasha.jpg" alt="Фото Саши">
 					<figcaption>С нашим менеджером Сашей вы познакомитесь в первую очередь. Она проконсультирует вас, соберёт
 						все документы
 						и ответит на все вопросы.
 					</figcaption>
 				</figure>
 				<figure>
-					<img src="img/Kate.png" alt="Фото кати">
+					<img src="img/kate.jpg" alt="Фото кати">
 					<figcaption>
 						Катя тоже занимается дизайном.
 						Она всегда находит общий язык
@@ -177,7 +193,7 @@
 				</li>
 			</ul>
 		</section>
-
+		<!--
 		<section class="reviews" id="reviews">
 			<h2>отзывы</h2>
 			<div class="carousel-wrapper">
@@ -186,25 +202,27 @@
 				<span id="item-3"></span>
 				<div class="reviews-content carousel-item item-1">
 					<a class="arrow arrow-prev" href="#item-3"><img src="img/Arrow_left.png" alt="Стрелка влево"></a>
-					<div class="text">
-						<p>
-							1«Восторг! Спасибо, за комфортную жизнь. Очень рада, что выбрала вашу студию для украшения своего
-							дома.
-						</p>
-						<p>
-							Работа шла быстро, было очень приятно общаться и взаимодествовайть
-							с сотрудниками. Не ожидала, что это будет так легко!
-						</p>
-						<p>
-							Буду советовать и своим друзьям к вам обращаться!»
-						</p>
-						<p><span>АННА БЕЛОВСКАЯ</span></p>
+					<div class="container-content-rewiews">
+						<div class="text">
+							<p>
+								1«Восторг! Спасибо, за комфортную жизнь. Очень рада, что выбрала вашу студию для украшения
+								своего
+								дома.
+							</p>
+							<p>
+								Работа шла быстро, было очень приятно общаться и взаимодествовайть
+								с сотрудниками. Не ожидала, что это будет так легко!
+							</p>
+							<p>
+								Буду советовать и своим друзьям к вам обращаться!»
+							</p>
+							<p><span>АННА БЕЛОВСКАЯ</span></p>
+						</div>
+						<div class="reviews-photo">
+							<img src="img/reviews1.jpg" alt="Фото отзыва">
+							<img src="img/reviews2.jpg" alt="Фото отзыва">
+						</div>
 					</div>
-					<div class="reviews-photo">
-						<img src="img/reviews1.png" alt="Фото отзыва">
-						<img src="img/reviews2.png" alt="Фото отзыва">
-					</div>
-
 					<a class="arrow arrow-next" href="#item-2"><img src="img/Arrow_right.png" alt="Стрелка вправо"></a>
 
 				</div>
@@ -227,8 +245,8 @@
 						<p><span>АННА БЕЛОВСКАЯ</span></p>
 					</div>
 					<div class="reviews-photo">
-						<img src="img/reviews1.png" alt="Фото отзыва">
-						<img src="img/reviews2.png" alt="Фото отзыва">
+						<img src="img/reviews1.jpg" alt="Фото отзыва">
+						<img src="img/reviews2.jpg" alt="Фото отзыва">
 					</div>
 
 					<a class="arrow arrow-next" href="#item-3"><img src="img/Arrow_right.png" alt="Стрелка вправо"></a>
@@ -253,8 +271,8 @@
 						<p><span>АННА БЕЛОВСКАЯ</span></p>
 					</div>
 					<div class="reviews-photo">
-						<img src="img/reviews1.png" alt="Фото отзыва">
-						<img src="img/reviews2.png" alt="Фото отзыва">
+						<img src="img/reviews1.jpg" alt="Фото отзыва">
+						<img src="img/reviews2.jpg" alt="Фото отзыва">
 					</div>
 
 					<a class="arrow arrow-next" href="#item-1"><img src="img/Arrow_right.png" alt="Стрелка вправо"></a>
@@ -262,7 +280,7 @@
 				</div>
 			</div>
 		</section>
-
+-->
 		<section class="request">
 			<form id="data-request">
 				<h2>Оставить заявку</h2>
